<resources>
    <string name="app_name" translatable="false">V-Belt Order</string>
    <string name="rupee_symbol" translatable="false">₹</string>

    <string name="language_english" translatable="false">English</string>
    <string name="language_gujarati" translatable="false">ગુજરાતી</string>

    <string name="create_new_order">Create New Order</string>
    <string name="view_orders">View Orders</string>

    <string name="size_in_inch">Size (inch)</string>
    <string name="size_in_inch_english" translatable="false">Size (inch)</string>
    <string name="multiplication_symbol" translatable="false">X</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_english" translatable="false">Quantity</string>
    <string name="total_inches">= %d inches</string>
    <string name="delete">Delete</string>
    <string name="add_new_item">+ Add new item</string>
    <string name="label_v_belt_type_a" translatable="false">V-Belt Type : <b>A</b></string>
    <string name="label_v_belt_type_b" translatable="false">V-Belt Type : <b>B</b></string>
    <string name="label_v_belt_type_c" translatable="false">V-Belt Type : <b>C</b></string>
    <string name="total_of_type_a"><![CDATA[Total belts of type A: %d,<br/>Total inches of A belts: %d,<br/>Total price for <b>A: %.2f ₹</b>]]></string>
    <string name="total_of_type_b"><![CDATA[Total belts of type B: %d,<br/>Total inches of B belts: %d,<br/>Total price for <b>B: %.2f ₹</b>]]></string>
    <string name="total_of_type_c"><![CDATA[Total belts of type C: %d,<br/>Total inches of C belts: %d,<br/>Total price for <b>C: %.2f ₹</b>]]></string>
    <string name="price_of_1_inch">Price of 1 inch (₹)</string>
    <string name="customer_name">Customer name</string>
    <string name="total_belts"><![CDATA[Total belts: <b>%d</b>]]></string>
    <string name="total_amount">Total amount: %.2f ₹</string>
    <string name="total_belts_and_grand_total">Total belts: %d\nGrand total: %.2f ₹</string>
    <string name="total_belts_and_grand_total_english" translatable="false">Total belts: %d\nGrand total: %.2f ₹</string>
    <string name="error_enter_customer_name">Enter customer name.</string>
    <string name="error_enter_price_per_inch_a">Enter price per inch for belt type <b>A</b>.</string>
    <string name="error_enter_price_per_inch_b">Enter price per inch for belt type <b>B</b>.</string>
    <string name="error_enter_price_per_inch_c">Enter price per inch for belt type <b>C</b>.</string>
    <string name="order_date">Order date: %s</string>
    <string name="belts_of_size_a"><![CDATA[Belts of size <b>A: %d</b>]]></string>
    <string name="belts_of_size_b"><![CDATA[Belts of size <b>B: %d</b>]]></string>
    <string name="belts_of_size_c"><![CDATA[Belts of size <b>C: %d</b>]]></string>
    <string name="delete_the_order_from_x">Delete the order from %s?</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="send_order">Send order</string>
    <string name="belts_amount_english" translatable="false">Belts: %d, Amount: %.2f ₹</string>

    <string name="nitin_traders" translatable="false">Nitin Traders</string>
    <string name="save" translatable="false">SAVE</string>
</resources>
